--- a/client/styles.css
+++ b/client/styles.css
@@ -25,7 +25,12 @@ body {
 header {
   display: flex;
   justify-content: space-between;
-  background: rgba(0, 0, 0, 0.25);
+  background: rgba(0, 0, 0, 0.85);
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: 3;
+  left: 0;
 }
 
 header h1 {
