--- a/client/styles.css
+++ b/client/styles.css
@@ -7,7 +7,6 @@ html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:1
 
 body {
   background: rgb(59, 61, 74);
-  background: radial-gradient(circle at center, #303030 0%, #101010 100%);
   font-family: Arial, Helvetica, "Helvetica Neue", sans-serif;
   font-size: 16px;
   color: #28201d;
@@ -25,7 +24,7 @@ body {
 header {
   display: flex;
   justify-content: space-between;
-  background: rgba(0, 0, 0, 0.85);
+  /*background: rgba(0, 0, 0, 0.85);*/
   position: fixed;
   width: 100%;
   top: 0;
@@ -464,7 +463,6 @@ form.search .advanced .advanced__container {
   display: flex;
   align-items: center;
   justify-content: center;
-  background: linear-gradient(180deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0) 70%, rgba(0, 0, 0, 0.3));
 }
 
 .job .tile span {
@@ -537,6 +535,14 @@ ul {
   background-color: #bcbcbc;
   height:100%;
   width: 100%;
+}
+
+.App__Kanban {
+  background-color: #bcbcbc;
+  height: calc(100vh - 50px);
+  overflow: hidden;
+  width: 100%;
+  margin-top: 50px;
 }
 
 .list {
