Video bg component on search page, files cleanup

--- a/client/styles.css
+++ b/client/styles.css
@@ -7,7 +7,6 @@ html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:1
 
 body {
   background: rgb(59, 61, 74);
-  background: radial-gradient(circle at center, #303030 0%, #101010 100%);
   font-family: Arial, Helvetica, "Helvetica Neue", sans-serif;
   font-size: 16px;
   color: #28201d;
@@ -300,7 +299,13 @@ form.search .advanced .advanced__container {
   max-width: 265px;
   width: 100%;
   background: rgba(255, 255, 255, 0.75);
-  padding: 15px;
+  padding: 15px 15px 15px 20px;
+  overflow: hidden;
+  border-radius: 3px;
+}
+
+.search-results .sticky .strip {
+  background-color: rgb(92, 94, 220);
 }
 
 .search-results aside span {
@@ -382,7 +387,7 @@ form.search .advanced .advanced__container {
 
 .search-results .job {
   background: #fff;
-  padding: 10px 15px;
+  padding: 10px 15px 17px 20px;
   margin: 15px 0;
   display: flex;
   border-radius: 3px;
@@ -394,8 +399,8 @@ form.search .advanced .advanced__container {
   display: flex;
   justify-content: space-between;
 }
-
-.search-results .job > .strip {
+ 
+.search-results .strip {
   position: absolute;
   z-index: 0;
   top: 0;
