--- a/client/styles.css
+++ b/client/styles.css
@@ -278,18 +278,14 @@ form.search .advanced .advanced__container {
 /* homepage */
 
 /* search results */
-.search {
-
-}
-
 .search-results {
   display: flex;
-  max-width: 1100px;
+  max-width: 980px;
 }
 
 .search-results aside {
-  flex: 3;
-  margin: 51px 15px 15px 0;
+  flex: 2;
+  margin: 51px 20px 15px 0;
   position: relative;
 }
 
@@ -302,7 +298,7 @@ form.search .advanced .advanced__container {
   overflow: hidden;
   border-radius: 3px;
   color: rgba(255, 255, 255, 1);
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   border: solid 1px rgba(255, 255, 255, 0.15)
 }
 
@@ -408,13 +404,13 @@ form.search .advanced .advanced__container {
 .search-results .jobs .sort {
   display: flex;
   justify-content: flex-end;
-  margin-top: 15px;
+  margin: 15px 0 16px;
 }
 
 .search-results .job {
-  background: #fff;
+  background: #fbfbfb;
   padding: 10px 15px 17px 20px;
-  margin: 15px 0;
+  margin: 0 0 20px;
   display: flex;
   border-radius: 3px;
   overflow: hidden;
